# mia-agent

./: .env.example  .gitattributes  .gitignore  .prettierignore  .vercelignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DESIGN.md  DETAILS.md  DEVELOPMENT.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  user.example.md  user.md  vercel.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.mia/: computer-use.jsonl
apps/agent-service/: README.md  pyproject.toml
apps/agent-service/mia/: cli.py  design_context.py  main.py  models.py  settings.py  user_profile.py
apps/agent-service/mia/graphs/: coding_orchestra.py  design_orchestra.py  memory_court.py  router.py
apps/agent-service/mia/integrations/: convex.py  sendblue.py  telegram.py
apps/agent-service/mia/tools/: coding.py  composio.py  computer.py  registry.py  search.py
apps/agent-service/tests/: test_composio_tools.py  test_computer_tools.py  test_design_context.py  test_router_graph.py  test_search_tools.py  test_sendblue_webhook.py  test_tool_registry.py  test_user_profile.py  test_web_chat.py
convex/: agentRuns.ts  agentSpawns.ts  http.ts  memories.ts  memoryCourt.ts  messages.ts  pendingActions.ts  schema.ts  sessions.ts  systemHealth.ts  thoughtLogs.ts  validators.ts
docs/: API_CONTRACTS.md  ARCHITECTURE_OVERVIEW.md  COMMERCIAL_MODEL.md  CONTRIBUTOR_LADDER.md  INTEGRATION_GUIDE.md  LOCAL_SETUP.md  (+4 more)
(+79 files in other folders)
